# maya-bridge

./: CMakeLists.txt  README.md
include/: maya_bridge.h  shared_data.h  sharedbuffer.h
include/maya-bridge/: shared_buffer.h  shared_data.h
src/: bridge.cpp  bridge.h  main.cpp  main2.cpp  maya_bridge.cpp  maya_bridge.h  shared_data.h  sharedbuffer.h
